// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Formatter Bad Date passed in 1`] = `
<Component
  locale="en-US"
  options={Object {}}
  passthrough={false}
>
  <span />
</Component>
`;

exports[`Date Formatter does basic formatting of a date string- without config 1`] = `
<Component
  locale="en-US"
  options={Object {}}
  passthrough={false}
>
  <span>
    3/25/2015
  </span>
</Component>
`;

exports[`Date Formatter does basic formatting of a date- without config 1`] = `
<Component
  locale="en-US"
  options={Object {}}
  passthrough={false}
>
  <span>
    12/19/2012
  </span>
</Component>
`;

exports[`Date Formatter does basic formatting of a zero date string with UTC option 1`] = `
<Component
  locale="en-US"
  options={
    Object {
      "timeZone": "UTC",
    }
  }
  passthrough={false}
>
  <span>
    3/1/2015
  </span>
</Component>
`;

exports[`Date Formatter does basic formatting of a zero date string without UTC option 1`] = `
<Component
  locale="en-US"
  options={Object {}}
  passthrough={false}
>
  <span>
    2/28/2015
  </span>
</Component>
`;

exports[`Date Formatter is responsive to locale changes 1`] = `
<Component
  locale="de-DE"
  options={Object {}}
  passthrough={false}
>
  <span>
    19.12.2012
  </span>
</Component>
`;

exports[`Date Formatter passthrough works 1`] = `
<Component
  locale="en-US"
  options={Object {}}
  passthrough={true}
>
  <span>
    badDate
  </span>
</Component>
`;

exports[`Date Formatter takes and applies an options prop 1`] = `
<Component
  locale="en-US"
  options={
    Object {
      "day": "2-digit",
      "era": "long",
      "hour": "2-digit",
      "minute": "2-digit",
      "month": "long",
      "second": "2-digit",
      "timeZone": "America/New_York",
      "timeZoneName": "long",
      "weekday": "long",
      "year": "2-digit",
    }
  }
  passthrough={false}
>
  <span>
    Wednesday, December 19, 12 Anno Domini, 10:00:00 PM Eastern Standard Time
  </span>
</Component>
`;
